Font size reduced for highlight sections

--- a/assets/themes/the-minimum/css/style.css
+++ b/assets/themes/the-minimum/css/style.css
@@ -201,6 +201,7 @@ pre {
   background-color: #393939;
   border: 1px solid #393939;
   font-family: "Bitstream Vera Sans Mono", "Courier New", Courier, monospace;
+  font-size: 12px;
   margin-left: 0;
   margin-right: 0;
   padding: 1.625em;
